# shaka-player-embedded

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DetailsStudent  Doxyfile.in  Info.plist  LICENSE.chromium  Makefile.in  README.md  README_8md.html  README_8md_source.html  ShakaPlayerEmbedded_8h.html  ShakaPlayerEmbedded_8h_source.html  ShakaPlayerStorage_8h.html  ShakaPlayerStorage_8h_source.html  ShakaPlayerStorage_8mm.html  ShakaPlayerStorage_8mm_source.html  ShakaPlayerView_09Internal_8h.html  ShakaPlayerView_09Internal_8h_source.html  ShakaPlayerView_8h.html  ShakaPlayerView_8h_source.html  ShakaPlayerView_8mm.html  ShakaPlayerView_8mm_source.html  ShakaPlayer_09Internal_8h.html  ShakaPlayer_09Internal_8h_source.html  ShakaPlayer_8h.html  ShakaPlayer_8h_source.html  ShakaPlayer_8mm.html  ShakaPlayer_8mm_source.html  abi__guidelines_8md.html  abi__guidelines_8md_source.html  annotated.html  any_8cc.html  any_8cc_source.html  any_8h.html  (+2090 more)
build_overrides/: build.gni  gtest.gni
sample_xcode_project/: README.md  build.sh
sample_xcode_project/sample_xcode_project/: AppDelegate.h  AppDelegate.m  AssetSelectionTableViewController.h  AssetSelectionTableViewController.m  ConfigTableValue.h  ConfigTableValue.m  ConfigTableViewController.h  ConfigTableViewController.m  ErrorDisplayView.h  ErrorDisplayView.m  Info.plist  LicenseTableViewController.h  LicenseTableViewController.m  LicenseViewController.h  LicenseViewController.m  NSObject+ShakaLayoutHelpers.h  NSObject+ShakaLayoutHelpers.m  PlayerViewController.h  PlayerViewController.m  ProgressAndBufferedSlider.h  ProgressAndBufferedSlider.m  assets.plist  main.m
sample_xcode_project/sample_xcode_project.xcodeproj/: project.pbxproj
sample_xcode_project/sample_xcode_project/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  (+202 more)
shaka/demo/: main.cc
shaka/docs/: abi_guidelines.md  eme_plugins.md  ffmpeg_encryption.md  layout.xml  media_pipeline.md  symbolizing-crash-reports.md  tutorial_filters.md  tutorial_setup.md
shaka/include/shaka/: ShakaPlayer.h  ShakaPlayerEmbedded.h  ShakaPlayerStorage.h  ShakaPlayerView.h  ShakaPlayerView2.h  async_results.h  config_names.h  error.h  error_objc.h  frame.h  js_manager.h  macros.h  net.h  net_objc.h  optional.h  player.h  sdl_frame_drawer.h  storage.h  text_track.h  utils.h  variant.h  video.h  vtt_cue.h
shaka/js/: shaka-player.compiled.debug.js  shaka-player.compiled.js
shaka/src/core/: environment.cc  environment.h  js_manager_impl.cc  js_manager_impl.h  js_object_wrapper.cc  js_object_wrapper.h  member.h  network_thread.cc  network_thread.h  ref_ptr.h  rejected_promise_handler.cc  rejected_promise_handler.h  task_runner.cc  task_runner.h
shaka/src/debug/: mutex.h  thread.cc  thread.h  thread_event.cc  thread_event.h  waitable.cc  waitable.h  waiting_tracker.cc  waiting_tracker.h
shaka/src/eme/: clearkey.json  clearkey_implementation.cc  clearkey_implementation.h  clearkey_implementation_factory.cc  clearkey_implementation_factory.h  configuration.cc  implementation.cc
shaka/src/js/: base_64.cc  base_64.h  console.cc  console.h  debug.cc  debug.h  js_error.cc  js_error.h  location.cc  location.h  manifest.idl  navigator.cc  navigator.h  net.cc  net.h  offline_externs.idl  player_externs.idl  stats.idl  test_type.cc  test_type.h  text_coders.cc  text_coders.h  timeouts.cc  timeouts.h  track.idl  url.cc  url.h  vtt_cue.cc  vtt_cue.h  xml_http_request.cc  xml_http_request.h
shaka/src/mapping/: any.cc  any.h  backing_object.cc  backing_object.h  backing_object_factory.cc  backing_object_factory.h  byte_buffer.cc  byte_buffer.h  byte_string.cc  byte_string.h  callback.cc  callback.h  convert_js.h  enum.h  exception_or.h  generic_converter.h  js_engine.h  js_utils.cc  js_utils.h  js_wrappers.h  names.h  promise.cc  promise.h  register_member.cc  register_member.h  struct.cc  struct.h  weak_js_ptr.h
shaka/src/media/: apple_audio_renderer.cc  apple_video_renderer.cc  audio_renderer.cc  audio_renderer.h  audio_renderer_common.cc  audio_renderer_common.h  base_frame.cc  base_frame.h  decoder.cc  decoder_thread.cc  decoder_thread.h  default_media_player.cc  demuxer.cc  demuxer_thread.cc  demuxer_thread.h  ffmpeg_decoded_frame.cc  ffmpeg_decoded_frame.h  ffmpeg_encoded_frame.cc  ffmpeg_encoded_frame.h  frame_buffer.cc  frame_buffer.h  frame_converter.cc  frame_converter.h  frame_drawer.cc  frame_drawer.h  frames.cc  hardware_support.cc  hardware_support.h  locked_frame_list.cc  locked_frame_list.h  media_capabilities.cc  media_player.cc  media_processor.cc  media_processor.h  media_track_public.cc  media_utils.cc  media_utils.h  media_utils_ios.mm  mse_media_player.cc  mse_media_player.h  (+24 more)
shaka/src/memory/: heap_tracer.cc  heap_tracer.h  object_tracker.cc  object_tracker.h  v8_heap_tracer.cc  v8_heap_tracer.h
shaka/src/public/: ShakaPlayer+Internal.h  ShakaPlayer.mm  ShakaPlayerStorage.mm  ShakaPlayerView+Internal.h  ShakaPlayerView.mm  ShakaPlayerView2.mm  data.cc  eme_promise.cc  eme_promise_impl.h  error.cc  error_objc+Internal.h  error_objc.mm  frame.cc  js_manager.cc  net_objc+Internal.h  net_objc.mm  net_public.cc  optional.cc  player.cc  sdl_frame_drawer.cc  storage.cc  (+4 more)
shaka/test/: main.cc
shaka/tools/: abi_test.py  clang_tidy.py  embed_tests.py  embed_utils.py  embed_v8_snapshot.py  eme_plugin_build_info.py  gen_config_h.py  gen_eme_plugins.py  gen_info_plist.py  make_license_file.py  parse_makefile.py  patch.py  presubmit.py  run_configure.py  run_ios_tests.py  touch.py  utils.py  version.py  version_test.py
tools/ubsan/: blacklist.txt
(+271 files in other folders)
